--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.2.6",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
