--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
+    "react-intersection-observer": "^9.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.2.6",
     "sass": "^1.52.1",
