--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^6.3.3",
     "gsap": "^3.10.4",
     "react": "^18.1.0",
+    "react-delay-render": "^0.1.2",
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
     "react-intersection-observer": "^9.1.0",
