--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.3.3",
     "gsap": "^3.10.4",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-delay-render": "^0.1.2",
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
     "react-intersection-observer": "^9.1.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.2.6",
