--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -19,7 +19,7 @@ collections:
       - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
       - {label: "Body", name: "body", widget: "markdown"} 
 
-collections:
+images:
   - name: "portfolio-image" # Used in routes, e.g., /admin/collections/blog
     label: "image" # Used in the UI
     folder: "images-for-portfolio" # The path to the folder where the documents are stored
