--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,9 +18,9 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
       - {label: "Body", name: "body", widget: "markdown"} 
-      
+
   - name: "portfolio-image" # Used in routes, e.g., /admin/collections/blog
-    label: "image" # Used in the UI
+    label: "Image" # Used in the UI
     folder: "images-for-portfolio" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
