--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -11,7 +11,7 @@ collections:
     label: "Blog" # Used in the UI
     folder: "posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{year}} - {{month}} - {{day}} - '{{slug}}'" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
@@ -21,12 +21,21 @@ collections:
 
   - name: "portfolio-image" # Used in routes, e.g., /admin/collections/blog
     label: "Image" # Used in the UI
-    folder: "images-for-portfolio" # The path to the folder where the documents are stored
+    folder: "src/assets/images/image-for-portfolio" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "ID", name: "id", widget: "number"}
       - {label: "Image", name: "image", widget: "image"}
-      
+
+  - name: "photo-album" # Used in routes, e.g., /admin/collections/blog
+    label: "Photo album" # Used in the UI
+    folder: "photo-albums" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{year}} - {{month}} - {{day}} - '{{slug}}'" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Year", name: "date", widget: "datetime"}
+      - {label: "Album description", name: "body", widget: "markdown"} 
 
 
