--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -33,16 +33,13 @@ collections:
   - name: "test-field"
     label: "Test"
     create: true
-    files:
-      - file: "src/content/photo-albums.json"
-        label: "Test field"
-        name: "test"
-        extension: "json"
-        format: "json"
-        fields:
-          - {label: "Title", name: "title", widget: "string"}
-          - {label: "Year", name: "date", widget: "datetime"}
-          - {label: "Album description", name: "description", widget: "text"} 
+    folder: "src/content/photo-albums"
+    format: "json"
+    slug: "{{year}} - {{month}} - {{day}} - '{{slug}}'"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Year", name: "date", widget: "datetime"}
+      - {label: "Album description", name: "description", widget: "text"} 
 
 
 
