--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -30,28 +30,37 @@ collections:
       - {label: "Album description", name: "description", widget: "text"} 
 
   # Test
-  - name: "test-field"
-    label: "Test"
-    create: true
-    folder: "src/content/photo-albums"
-    format: "json"
-    slug: "{{slug}}"
-    fields:
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Year", name: "date", widget: "datetime"}
-      - {label: "Album description", name: "description", widget: "text"} 
+  # - name: "test-field"
+  #   label: "Test"
+  #   create: true
+  #   folder: "src/content/photo-albums"
+  #   format: "json"
+  #   slug: "{{slug}}"
+  #   fields:
+  #     - {label: "Title", name: "title", widget: "string"}
+  #     - {label: "Year", name: "date", widget: "datetime"}
+  #     - {label: "Album description", name: "description", widget: "text"} 
 
   # Test 2
-  - name: "test-field 2"
-    label: "Test two"
-    create: true
-    file: "src/content"
-    format: "json"
-    slug: "{{slug}}"
+  # - name: "test-field 2"
+  #   label: "Test two"
+  #   create: true
+  #   file: "src/content"
+  #   format: "json"
+  #   slug: "{{slug}}"
+  #   fields:
+  #     - {label: "Title", name: "title", widget: "string"}
+  #     - {label: "Year", name: "date", widget: "datetime"}
+  #     - {label: "Album description", name: "description", widget: "text"} 
+
+  # Test 3
+  - name: "list test"
+    label: "Gallery"
+    name: "galleryImages"
+    widget: "list"
     fields:
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Year", name: "date", widget: "datetime"}
-      - {label: "Album description", name: "description", widget: "text"} 
+      - { label: "Source", name: "src", widget: "string" }
+      - { label: "Alt Text", name: "alt", widget: "string" }
 
 
 
