--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -29,10 +29,37 @@ collections:
       - {label: "Year", name: "date", widget: "datetime"}
       - {label: "Album description", name: "description", widget: "text"} 
 
+  # Test
+  # - name: "test-field"
+  #   label: "Test"
+  #   create: true
+  #   folder: "src/content/photo-albums"
+  #   format: "json"
+  #   slug: "{{slug}}"
+  #   fields:
+  #     - {label: "Title", name: "title", widget: "string"}
+  #     - {label: "Year", name: "date", widget: "datetime"}
+  #     - {label: "Album description", name: "description", widget: "text"} 
+
+  # Test 2
+  # - name: "test-field 2"
+  #   label: "Test two"
+  #   create: true
+  #   file: "src/content"
+  #   format: "json"
+  #   slug: "{{slug}}"
+  #   fields:
+  #     - {label: "Title", name: "title", widget: "string"}
+  #     - {label: "Year", name: "date", widget: "datetime"}
+  #     - {label: "Album description", name: "description", widget: "text"} 
+
   # Test 3
   - name: "list-test"
     label: "Test"
     widget: "list"
+    folder: "src/content/photo-albums"
+    create: true
+    slug: "{{year}} - {{month}} - {{day}} - '{{slug}}'"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
