--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
 
 # These lines should *not* be indented
-media_folder: "src/assets/images/uploads" 
-public_folder: "/images/uploads" 
+media_folder: "public/images" 
+public_folder: "/images" 
 
 collections:
 
