--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -37,7 +37,7 @@ collections:
               - {label: "Year", name: year, widget: number}
               - {label: "Album description", name: "description", widget: text}
               - {label: "Album cover image", name: "image", widget: "image"}
-              - {label: "Album cover image", name: "image", widget: "list"}
+              - {label: "test", name: "images", widget: "list"}
 
 
 
