--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.10.4",
     "moment": "^2.29.3",
     "netlify-cms": "^2.10.192",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "react": "^18.1.0",
     "react-delay-render": "^0.1.2",
     "react-dom": "^18.1.0",
